--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       />
       <img
         class="sticker2"
-        src="/gitHsu/vday/assets/PikPng.com_cute-heart-png_1053777.png"
+        src="/vday/assets/PikPng.com_cute-heart-png_1053777.png"
       />
-      <img class="top" src="/gitHsu/vday/assets/unnamed.jpg" alt="" />
+      <img class="top" src="/vday/assets/unnamed.jpg" alt="" />
       <div><p id="multipleStrings"></p></div>
       <img
         class="bottom"
-        src="/gitHsu/vday/assets/NicePng_cartoon-heart-png_8757296.png"
+        src="/vday/assets/NicePng_cartoon-heart-png_8757296.png"
         alt=""
       />
     </div>
