--- a/index.html
+++ b/index.html
@@ -9,19 +9,13 @@
   </head>
   <body>
     <div class="main">
-      <img
-        class="sticker1"
-        src="/gitHsu/vday/assets/PikPng.com_cute-heart-png_1053777.png"
-      />
-      <img
-        class="sticker2"
-        src="/vday/assets/PikPng.com_cute-heart-png_1053777.png"
-      />
-      <img class="top" src="/vday/assets/unnamed.jpg" alt="" />
+      <img class="sticker1" src="/vday/PikPng.com_cute-heart-png_1053777.png" />
+      <img class="sticker2" src="/vday/PikPng.com_cute-heart-png_1053777.png" />
+      <img class="top" src="/vday/unnamed.jpg" alt="" />
       <div><p id="multipleStrings"></p></div>
       <img
         class="bottom"
-        src="/vday/assets/NicePng_cartoon-heart-png_8757296.png"
+        src="/vday/NicePng_cartoon-heart-png_8757296.png"
         alt=""
       />
     </div>
